--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "plex-lazytv"
-version = "0.1.0"
-description = "Add your description here"
+version = "1.0.0"
+description = "A Tautulli script for generating smart random unwatched episodes playlists."
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
